--- a/CC-Electron/src/renderer/styles/layout-variables.css
+++ b/CC-Electron/src/renderer/styles/layout-variables.css
@@ -1,31 +1,15 @@
-/* * {
-    outline: 1px solid yellow;
-} */
-
 html {
     /* ==== sbar -> Scroll Bar ==== */
     --sbar-length: 20px;
 
-    --sbar-thumb-bradius: calc(var(--sbar-length) / 2);
     --sbar-thumb-bwidth: calc((var(--sbar-length) - 6px) / 2);
+    --sbar-thumb-bradius: calc(var(--sbar-length) / 2);
 
-    /* ==== tbtn -> Title Button ==== */
-    --tbtn-hpadding: 15px;
-    --tbtn-vpadding: 7.5px;
+    /* ==== initoverlay -> Initialization Overlay ==== */
+    --initoverlay-svg-length: 100px;
 
-    --tbtn-svg-length: 10px;
-
-    /* ==== vlabel -> Version Label ==== */
-    --vlabel-fsize: 11px;
-    --vlabel-fweight: 300;
-    --vlabel-lmargin: 10px;
-
-    /* ==== inito -> Initialization Overlay ==== */
-    --inito-span-fsize: 80px;
-    --inito-span-fweight: 600;
-
-    --inito-svg-height: 100px;
-    --inito-svg-width: 100px;
+    --initoverlay-span-fsize: 80px;
+    --initoverlay-span-fweight: 600;
 
     /* ==== islabel -> Initialization Status Label ==== */
     --islabel-tmargin: 50px;
@@ -35,78 +19,8 @@ html {
     /* ==== carea -> Client Area ==== */
     --carea-hgap: 12px;
 
-    /* ==== nblock -> Nav(igation) Block ==== */
-    --nblock-bradius: 10px;
-
-    /* ==== nbar -> Nav(igation) Bar ==== */
-    --nbar-vgap: 10px;
-    --nbar-tpadding: 10px;
-    --nbar-hpadding: 10px;
-    --nbar-bpadding: 20px;
-    --nbar-width: calc(var(--ldp-svg-length) + 2 * var(--nbar-hpadding));
-    --nbar-active-width: calc(var(--nbar-width) + var(--ldp-hgap) + var(--ldp-h1-width));
-
-    --nbar-hr-height: 1.5px;
-    --nbar-hr-lmargin: calc(var(--nbar-hpadding) / -2);
-    --nbar-hr-width: calc(100% + var(--nbar-hpadding));
-
-    /* ==== ldp -> Logo Display ==== */
-    --ldp-hgap: 20px;
-
-    --ldp-h1-fsize: 28px;
-    --ldp-h1-fweight: 600;
-    --ldp-h1-width: 111px;
-
-    --ldp-svg-length: 60px;
-
-    /* ==== nbtn -> Nav(igation) Button ==== */
-    --nbtn-bradius: 10px;
-    --nbtn-hgap: 40px;
-    --nbtn-hmargin: calc((var(--ldp-svg-length) - var(--nbtn-svg-length) - 2 * var(--nbtn-padding)) / 2);
-    --nbtn-padding: 10px;
-
-    --nbtn-span-fsize: 20px;
-    --nbtn-span-fweight: 400;
-
-    --nbtn-svg-length: 30px;
-
-    /* ==== rbtn -> Record Button ==== */
-    --rbtn-bwidth: 1.5px;
-    --rbtn-padding: calc(var(--nbtn-padding) - var(--rbtn-bwidth));
-
-    /* ==== rctr -> Recording Container ==== */
-    --rctr-bradius: 10px;
-    --rctr-bwidth: 1.5px;
-    --rctr-gap: 10px;
-    --rctr-rinset: calc(var(--nbar-hpadding) + var(--nbtn-hmargin));
-    --rctr-binset: calc(var(--nbar-vgap) + var(--rarlabel-height) + var(--nbar-bpadding));
-    --rctr-active-binset: calc(var(--rctr-binset) + var(--rctr-tpadding) + var(--rctr-bpadding));
-    --rctr-linset: calc(var(--nbar-hpadding) + var(--nbtn-hmargin));
-    --rctr-tpadding: 2.5px;  /* calculatable */
-    --rctr-rpadding: 2.5px;
-    --rctr-lpadding: 2.5px;
-    --rctr-bpadding: 25px;
-
-    /* ==== crtlabel -> Current Recording Time Label ==== */
-    --crtlabel-width: calc(var(--nbtn-svg-length) + 2 * var(--nbtn-padding));
-    --crtlabel-fsize: 15px;
-    --crtlabel-fweight: 300;
-
-    /* ==== rglabel -> Recording Game Label ==== */
-    --rglabel-fsize: 12px;
-    --rglabel-fweight: 400;
-
-    /* ==== rarlabel -> Resume Auto Record Label ==== */
-    --rarlabel-height: calc(3 * var(--rarlabel-fsize));
-    --rarlabel-hmargin: var(--nbtn-hmargin);
-    --rarlabel-fsize: 12px;
-    --rarlabel-fweight: 400;
-
-    /* ==== nt -> Nav(igation) Toggle ==== */
-    --ntbtn-svg-length: 15px;
-
-    /* ==== cb -> Content Block ==== */
-    --cblock-bradius: 10px;
+    /* ==== cblock -> Content Block ==== */
+    --cblock-tlbradius: 10px;
 
     /* ==== gslabel -> General Status Label ==== */
     --gslabel-tinset: 40px;
@@ -117,8 +31,8 @@ html {
 
     /* ==== csection -> Content Section ==== */
     --csection-vgap: var(--nbar-vgap);
-    --csection-hpadding: calc(var(--nbar-hpadding) + var(--ntbtn-svg-length));
     --csection-vpadding: var(--nbar-hpadding);
+    --csection-hpadding: calc(var(--nbar-hpadding) + var(--ntbtn-svg-length));
 
     --csection-h2-fsize: 60px;
     --csection-h2-fweight: 500;
@@ -130,8 +44,8 @@ html {
     /* ==== sctr1 -> Section Container 1 ==== */
     --sctr1-bradius: 10px;
     --sctr1-vgap: 30px;
-    --sctr1-hpadding: var(--csection-hpadding);
     --sctr1-vpadding: var(--csection-vpadding);
+    --sctr1-hpadding: var(--csection-hpadding);
 
     --sctr1-sb-track-margin: calc(var(--sctr1-vpadding) - var(--sbar-thumb-bwidth));
 
@@ -145,9 +59,89 @@ html {
     --sctr2-hr-lmargin: var(--nbar-hr-lmargin);
     --sctr2-hr-width: calc(100% + var(--sctr1-hpadding));
 
+    /* ==== vlabel -> Version Label ==== */
+    --vlabel-lmargin: 10px;
+    --vlabel-fsize: 11px;
+    --vlabel-fweight: 300;
+
+    /* ==== tbtn -> Title Button ==== */
+    --tbtn-vpadding: 7.5px;
+    --tbtn-hpadding: 15px;
+
+    --tbtn-svg-length: 10px;
+
+    /* ==== nblock -> Nav(igation) Block ==== */
+    --nblock-trbradius: 10px;
+
+    /* ==== nbar -> Nav(igation) Bar ==== */
+    --nbar-vgap: 10px;
+    --nbar-tpadding: 10px;
+    --nbar-hpadding: 10px;
+    --nbar-bpadding: 20px;
+    --nbar-width: calc(var(--ldp-svg-length) + 2 * var(--nbar-hpadding));
+    --nbar-alt-width: calc(var(--nbar-width) + var(--ldp-hgap) + var(--ldp-h1-width));
+
+    --nbar-hr-height: 1.5px;
+    --nbar-hr-lmargin: calc(var(--nbar-hpadding) / -2);
+    --nbar-hr-width: calc(100% + var(--nbar-hpadding));
+
+    /* ==== ldp -> Logo Display ==== */
+    --ldp-hgap: 20px;
+
+    --ldp-svg-length: 60px;
+
+    --ldp-h1-width: 111px;
+    --ldp-h1-fsize: 28px;
+    --ldp-h1-fweight: 600;
+
+    /* ==== nbtn -> Nav(igation) Button ==== */
+    --nbtn-bradius: 10px;
+    --nbtn-hgap: 40px;
+    --nbtn-hmargin: calc((var(--ldp-svg-length) - var(--nbtn-svg-length) - 2 * var(--nbtn-padding)) / 2);
+    --nbtn-padding: 10px;
+
+    --nbtn-svg-length: 30px;
+
+    --nbtn-span-fsize: 20px;
+    --nbtn-span-fweight: 400;
+
+    /* ==== rbtn -> Record Button ==== */
+    --rbtn-bwidth: 1.5px;
+    --rbtn-padding: calc(var(--nbtn-padding) - var(--rbtn-bwidth));
+
+    /* ==== rctr -> Recording Container ==== */
+    --rctr-rinset: calc(var(--nbar-hpadding) + var(--nbtn-hmargin));
+    --rctr-binset: calc(var(--nbar-vgap) + var(--rarlabel-height) + var(--nbar-bpadding));
+    --rctr-alt-binset: calc(var(--rctr-binset) + var(--rctr-tpadding) + var(--rctr-bpadding));
+    --rctr-linset: calc(var(--nbar-hpadding) + var(--nbtn-hmargin));
+    --rctr-bwidth: 1.5px;
+    --rctr-bradius: 10px;
+    --rctr-hgap: 10px;
+    --rctr-tpadding: 2.5px;  /* calculatable */
+    --rctr-hpadding: 2.5px;
+    --rctr-bpadding: 25px;
+
+    /* ==== crtlabel -> Current Recording Time Label ==== */
+    --crtlabel-width: calc(var(--nbtn-svg-length) + 2 * var(--nbtn-padding));
+    --crtlabel-fsize: 15px;
+    --crtlabel-fweight: 300;
+
+    /* ==== crglabel -> Current Recording Game Label ==== */
+    --crglabel-fsize: 12px;
+    --crglabel-fweight: 400;
+
+    /* ==== rarlabel -> Resume Auto Record Label ==== */
+    --rarlabel-height: calc(3 * var(--rarlabel-fsize));
+    --rarlabel-hmargin: var(--nbtn-hmargin);
+    --rarlabel-fsize: 12px;
+    --rarlabel-fweight: 400;
+
+    /* ==== ntbtn -> Nav(igation) Toggle Button ==== */
+    --ntbtn-svg-length: 15px;
+
     /* ==== dctr -> Directory Container ==== */
-    --dctr-bradius: 10px;
     --dctr-bwidth: 1.5px;
+    --dctr-bradius: 10px;
     --dctr-height: calc(2 * var(--dctr-bwidth) + 2 * var(--dgl-vpadding) + 2 * var(--vpctr-padding) + var(--vtn-height) + 3 * var(--vpctr-vgap) + var(--vpctr-h4-fsize) + var(--vpctr-p-fsize) + 2 * var(--vobtn-padding) + var(--vobtn-svg-length) + var(--sbar-length));
 
     /* ==== dbtn -> Directory Button ==== */
@@ -189,40 +183,28 @@ html {
     --vctr-width: 80%;
 
     /* ==== ppsicon -> Play Pause Status Icon ==== */
-    --ppsicon-svg-height: 80px;
-    --ppsicon-svg-width: 80px;
+    --ppsicon-length: 80px;
 
     /* ==== psl -> Playback Slider ==== */
     --psl-height: 3px;
     --psl-hmargin: 6px;
     --psl-tpadding: 10px;
-    --psl-bpadding: calc((var(--psl-height) * var(--ptrack-transform) - var(--psl-height)) / 2);
+    --psl-bpadding: calc((var(--psl-height) * var(--ptrack-alt-transform) - var(--psl-height)) / 2);
 
     /* ==== ptrack -> Playback Track ==== */
-    --ptrack-transform: 2.5;
+    --ptrack-alt-transform: 2.5;
 
     /* ==== pthumb -> Playback Thumb ==== */
     --pthumb-bswidth: 100vw;
 
+    /* ==== pbar -> Playback Bar ==== */
+    --pbar-bpadding: 3px;
+
     /* ==== pbtn -> Playback Button ==== */
     --pbtn-bradius: 5px;
-    --pbtn-bmargin: 3px;
     --pbtn-hmargin: 3px;
     
     --pbtn-svg-length: 40px;
-
-    /* ==== slabel -> Speed Label ==== */
-    --slabel-fsize: 20px;
-    --slabel-fweight: 400;
-
-    /* ==== cslabel -> Current Speed Label ==== */
-    --cslabel-hpadding: var(--cslabel-vpadding);
-    --cslabel-vpadding: calc((var(--pbtn-svg-length) - var(--slabel-fsize)) / 2);
-    --cslabel-width: 3ch;
-
-    /* ==== mlabel -> Multiplier Label ==== */
-    --mlabel-hpadding: var(--cslabel-hpadding);
-    --mlabel-vpadding: var(--cslabel-vpadding);
 
     /* ==== pinput -> Playback Input ==== */
     --pinput-thumb-height: 16px;
@@ -232,81 +214,95 @@ html {
 
     /* ==== vsl -> Volume Slider ==== */
     --vsl-vpadding: calc((var(--pbtn-svg-length) - var(--pinput-track-height)) / 2);
-    --vsl-width: 100px;
+    --vsl-alt-width: 100px;
 
     --vsl-thumb-bradius: calc(var(--pinput-thumb-height) / 2);
     --vsl-thumb-width: var(--pinput-thumb-height);
 
+    /* ==== tlabel -> Time Label ==== */
+    --tlabel-fsize: 15px;
+    --tlabel-fweight: 400;
+
+    /* ==== ctlabel -> Current Time Label ==== */
+    /* --ctlabel-vpadding: calc((var(--pbtn-svg-length) - var(--tlabel-fsize)) / 2); */
+    /* --ctlabel-hpadding: var(--ctlabel-vpadding); */
+    --ctlabel-width: 5ch;
+
+    /* ==== ttlabel -> Total Time Label ==== */
+    /* --ttlabel-vpadding: var(--ctlabel-vpadding); */
+    /* --ttlabel-hpadding: var(--ctlabel-hpadding); */
+
     /* ==== ssl -> Speed Slider ==== */
     --ssl-vpadding: var(--vsl-vpadding);
-    --ssl-width: 150px;
+    --ssl-alt-width: 150px;
 
     --ssl-thumb-bradius: calc(var(--ssl-thumb-width) / 2);
     --ssl-thumb-width: 4px;
 
-    /* ==== vtlabel -> Video Time Label ==== */
-    --vtlabel-fsize: 15px;
-    --vtlabel-fweight: 400;
+    /* ==== slabel -> Speed Label ==== */
+    --slabel-fsize: 20px;
+    --slabel-fweight: 400;
 
-    /* ==== cvtlabel -> Current Video Time Label ==== */
-    --cvtlabel-hpadding: var(--cvtlabel-vpadding);
-    --cvtlabel-vpadding: calc((var(--pbtn-svg-length) - var(--cvtlabel-fsize)) / 2);
-    --cvtlabel-width: 5ch;
+    /* ==== cslabel -> Current Speed Label ==== */
+    --cslabel-vpadding: calc((var(--pbtn-svg-length) - var(--slabel-fsize)) / 2);
+    --cslabel-lpadding: var(--cslabel-vpadding);
+    --cslabel-width: 3ch;
 
-    /* ==== tvtlabel -> Total Video Time Label ==== */
-    --tvtlabel-hpadding: var(--cvtlabel-hpadding);
-    --tvtlabel-vpadding: var(--cvtlabel-vpadding);
+    /* ==== smlabel -> Speed Multiplier Label ==== */
+    --smlabel-vpadding: var(--cslabel-vpadding);
+    --smlabel-rpadding: var(--cslabel-lpadding);
 
     /* ==== tslider -> Timeline Slider ==== */
     --tslider-bradius: 10px;
     --tslider-height: 60px;
     --tslider-width: var(--vctr-width);
 
-    /* ==== ttrack -> Timeline Track ==== */
-    --otrack-height: var(--tslider-height);
-    --otrack-swidth: 1px;
+    /* ==== otrack -> Timeline Overlay ==== */
+    --toverlay-height: var(--tslider-height);
+    --toverlay-swidth: 1px;
 
-    --otrack-text-fsize: 12px;
-    --otrack-text-fweight: 10;
+    --toverlay-text-fsize: 12px;
+    --toverlay-text-fweight: 10;
 
     /* ==== tthumb -> Timeline Thumb ==== */
-    --tthumb-bradius: calc(var(--tthumb-width) / 2);
-    --tthumb-height: calc(-2 * var(--tthumb-tinset) + var(--tslider-height));
     --tthumb-tinset: -12px;
     --tthumb-linset: calc(var(--tthumb-width) / -2);
+
+    --tthumb-bradius: calc(var(--tthumb-width) / 2);
+    --tthumb-height: calc(-2 * var(--tthumb-tinset) + var(--tslider-height));
     --tthumb-width: 4px;
 
-    /* ==== stsgroupctr -> Settings Group ==== */
-    --stsgroupctr-hgap: 30px;
-
     /* ==== stctr -> Setting Container ==== */
-    --stctr-bradius: 10px;
     --stctr-bwidth: 1.5px;
+    --stctr-bradius: 10px;
     --stctr-vgap: 5px;
-    --stctr-hpadding: calc(var(--sctr1-hpadding) - var(--stctr-bwidth));
     --stctr-vpadding: calc(var(--sctr1-vpadding) - var(--stctr-bwidth));
-
-    --stctr-p-fsize: 11px;
-    --stctr-p-fweight: 300;
+    --stctr-hpadding: calc(var(--sctr1-hpadding) - var(--stctr-bwidth));
 
     --stctr-h4-fsize: 17px;
     --stctr-h4-fweight: 350;
 
+    --stctr-p-fsize: 11px;
+    --stctr-p-fweight: 300;
+
     /* ==== stpill -> Setting Pill ==== */
     --stpill-bradius: 10px;
-
-    --stpill-inputselect-hpadding: 10px;
-    --stpill-inputselect-width: 110px;
 
     --stpill-svg-length: 25px;
     --stpill-svg-margin: 5px;
 
+    --stpill-inputselect-hpadding: 10px;
+    --stpill-inputselect-width: 110px;
+
     /* ==== sttswitch -> Setting Toggle Switch ==== */
     --sttswitch-width: 66px;
 
+    --sttswitch-svg-inset: 2px;
     --sttswitch-svg-bradius: 7.5px;
     --sttswitch-svg-height: calc(var(--stpill-svg-length) + 2 * var(--stpill-svg-margin) - 2 * var(--sttswitch-svg-inset));
-    --sttswitch-svg-inset: 2px;
-    --sttswitch-svg-translateX: var(--sttswitch-svg-width);
     --sttswitch-svg-width: calc(var(--sttswitch-width) / 2 - var(--sttswitch-svg-inset));
+    --sttswitch-svg-alt-translateX: var(--sttswitch-svg-width);
+
+    /* ==== stsgroupctr -> Settings Group ==== */
+    --stsgroupctr-hgap: 30px;
 }
