--- a/CC-Electron/src/renderer/styles/settings-section.css
+++ b/CC-Electron/src/renderer/styles/settings-section.css
@@ -1,10 +1,3 @@
-.settings-group-ctr {
-    display: flex;
-    flex: 0 0 fit-content;
-    flex-flow: row nowrap;
-    gap: var(--stsgroupctr-hgap);
-}
-
 .setting-ctr {
     align-items: start;
     align-self: start;
@@ -21,9 +14,9 @@
 }
 
 .setting-ctr:hover {
-    border-color: var(--stctr-hover-bcolor);
+    border-color: var(--stctr-alt-bcolor);
 
-    background-color: var(--stctr-hover-bgcolor);
+    background-color: var(--stctr-alt-bgcolor);
 }
 
 .setting-ctr > h4 {
@@ -88,17 +81,12 @@
     cursor: pointer;
 }
 
+.setting-toggle-switch:has(input:checked) {
+    background-color: var(--sttswitch-alt-bgcolor);
+}
+
 .setting-toggle-switch > input {
     visibility: hidden;
-}
-
-.setting-toggle-switch:has(input:checked) {
-    background-color: var(--sttswitch-active-bgcolor);
-}
-
-.setting-toggle-switch > input:checked + svg {
-    fill: var(--stpill-svg-active-fill);
-    transform: translateX(var(--sttswitch-svg-translateX));
 }
 
 .setting-toggle-switch > svg {
@@ -112,4 +100,16 @@
     background-color: var(--sttswitch-svg-bgcolor);
     fill: var(--sttswitch-svg-fill);
     transition: var(--sttswitch-svg-transition);
+}
+
+.setting-toggle-switch > input:checked + svg {
+    fill: var(--stpill-svg-alt-fill);
+    transform: translateX(var(--sttswitch-svg-alt-translateX));
+}
+
+.settings-group-ctr {
+    display: flex;
+    flex: 0 0 fit-content;
+    flex-flow: row nowrap;
+    gap: var(--stsgroupctr-hgap);
 }
